los and pathfinding working

--- a/infinipy/demos/maze_navigation/gridmap.ipynb
+++ b/infinipy/demos/maze_navigation/gridmap.ipynb
@@ -173,13 +173,24 @@
     "    entities = []\n",
     "    #door is top down corner and then up by one\n",
     "    door_position = (size[0]-1,size[1]-2)\n",
+    "    vertical_wall_x = int(size[1]/2)\n",
+    "    vertical_wall_y = int(size[0] /2)\n",
+    "    vertical_wall_door_position = (vertical_wall_y, vertical_wall_x-1)\n",
+    "    door_positions = [door_position, vertical_wall_door_position]\n",
     "    for x in range(size[0]):\n",
     "        for y in range(size[1]):\n",
     "\n",
-    "            if (x,y) == door_position:\n",
+    "            if (x,y) ==  door_position:\n",
     "                entities.append(create_floor(x,y))\n",
-    "                print(\"left open for door at: \", door_position)\n",
+    "                print(\"left open for door at: \", (x,y))\n",
+    "            elif (x,y) == vertical_wall_door_position:\n",
+    "                entities.append(create_floor(x,y))\n",
+    "                print(\"left open for door at: \", (x,y))\n",
     "            elif x < wall_thickness or x >= size[0] - wall_thickness or y < wall_thickness or y >= size[1] - wall_thickness:\n",
+    "                entities.append(create_wall(x,y))\n",
+    "            elif x == vertical_wall_x and y <= vertical_wall_y:\n",
+    "                entities.append(create_wall(x,y))\n",
+    "            elif y == vertical_wall_y and x <= vertical_wall_x:\n",
     "                entities.append(create_wall(x,y))\n",
     "            else:\n",
     "                entities.append(create_floor(x,y))\n",
@@ -224,31 +235,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Printing entities for gridmap: gridmap_2023-11-19 23:51:29\n",
-      "Time since creation: 0.0010073184967041016\n",
+      "Printing entities for gridmap: gridmap_2023-11-20 00:21:37\n",
+      "Time since creation: 0.0005002021789550781\n",
       "Character1 (1, 1, 0)\n",
-      "Printing entities for gridmap: gridmap_2023-11-19 23:51:29\n",
-      "Time since creation: 0.0010073184967041016\n",
+      "Printing entities for gridmap: gridmap_2023-11-20 00:21:37\n",
+      "Time since creation: 0.0005002021789550781\n",
       "Character1 (1, 1, 0)\n",
       "Treasure1 (1, 2, 0)\n",
+      "left open for door at:  (5, 4)\n",
       "left open for door at:  (9, 8)\n",
       "found a tresure at 1 2\n",
       "# # # # # # # # # #\n",
-      "# C . . . . . . . #\n",
-      "# T . . . . . . . #\n",
+      "# C . . . # . . . #\n",
+      "# T . . . # . . . #\n",
+      "# . . . . # . . . #\n",
       "# . . . . . . . . #\n",
-      "# . . . . . . . . #\n",
-      "# . . . . . . . . #\n",
+      "# # # # # # . . . #\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . .\n",
       "# # # # # # # # # #\n",
       "Character1 has 0 items in inventory\n",
-      "2 [CharacterBlock(id='108102e8-f493-405c-9ec3-5cebe57fb56a', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None), FloorBlock(id='68152c0f-d7c4-4120-8661-4309281b910f', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
-      "2 [TreasureBlock(id='d7fb03de-d2ab-4353-9465-8810bcf1f1e1', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=None), FloorBlock(id='950b16aa-36ed-47fb-9c6b-31ad6077a0bd', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
+      "2 [CharacterBlock(id='6e3b03fd-fc15-4b6e-8035-a3143c896279', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None), FloorBlock(id='7f010f6b-e1a3-499a-83a6-6775b7fd2483', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
+      "2 [TreasureBlock(id='dd321444-d60d-42c1-adb4-87fd8f21a1b3', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=None), FloorBlock(id='68ed35e8-c0de-4470-a126-a9dc92d6ac2d', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
       "execute affordance PickUp\n",
       "Target stored in status changed\n",
-      "Removing TreasureBlock(id='d7fb03de-d2ab-4353-9465-8810bcf1f1e1', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='108102e8-f493-405c-9ec3-5cebe57fb56a', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 2, 0)\n",
+      "Removing TreasureBlock(id='dd321444-d60d-42c1-adb4-87fd8f21a1b3', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='6e3b03fd-fc15-4b6e-8035-a3143c896279', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 2, 0)\n",
       "3\n",
       "Character1\n",
       "Floor\n",
@@ -256,11 +268,11 @@
       "1\n",
       "Floor\n",
       "# # # # # # # # # #\n",
-      "# C . . . . . . . #\n",
+      "# C . . . # . . . #\n",
+      "# . . . . # . . . #\n",
+      "# . . . . # . . . #\n",
       "# . . . . . . . . #\n",
-      "# . . . . . . . . #\n",
-      "# . . . . . . . . #\n",
-      "# . . . . . . . . #\n",
+      "# # # # # # . . . #\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . .\n",
@@ -269,11 +281,11 @@
       "(1, 3, 0)\n",
       "(1, 4, 0)\n",
       "# # # # # # # # # #\n",
+      "# C . . . # . . . #\n",
+      "# . . . . # . . . #\n",
+      "# . . . . # . . . #\n",
       "# C . . . . . . . #\n",
-      "# . . . . . . . . #\n",
-      "# . . . . . . . . #\n",
-      "# C . . . . . . . #\n",
-      "# . . . . . . . . #\n",
+      "# # # # # # . . . #\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . .\n",
@@ -338,16 +350,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FloorBlock(id='950b16aa-36ed-47fb-9c6b-31ad6077a0bd', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)\n",
+      "FloorBlock(id='68ed35e8-c0de-4470-a126-a9dc92d6ac2d', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)\n",
       "Source position changed\n",
-      "Removing CharacterBlock(id='108102e8-f493-405c-9ec3-5cebe57fb56a', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[TreasureBlock(id='d7fb03de-d2ab-4353-9465-8810bcf1f1e1', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=...)], inventory_size=10, stored_in=None) from (1, 1, 0)\n",
-      "Removing TreasureBlock(id='d7fb03de-d2ab-4353-9465-8810bcf1f1e1', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='108102e8-f493-405c-9ec3-5cebe57fb56a', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 1, 0)\n",
+      "Removing CharacterBlock(id='6e3b03fd-fc15-4b6e-8035-a3143c896279', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[TreasureBlock(id='dd321444-d60d-42c1-adb4-87fd8f21a1b3', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=...)], inventory_size=10, stored_in=None) from (1, 1, 0)\n",
+      "Removing TreasureBlock(id='dd321444-d60d-42c1-adb4-87fd8f21a1b3', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='6e3b03fd-fc15-4b6e-8035-a3143c896279', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 1, 0)\n",
       "# # # # # # # # # #\n",
-      "# . . . . . . . . #\n",
+      "# . . . . # . . . #\n",
+      "# C . . . # . . . #\n",
+      "# . . . . # . . . #\n",
       "# C . . . . . . . #\n",
-      "# . . . . . . . . #\n",
-      "# C . . . . . . . #\n",
-      "# . . . . . . . . #\n",
+      "# # # # # # . . . #\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . .\n",
@@ -364,6 +376,178 @@
     "gridmap.execute_affordance(move_to_affordance, char, walkable_target)\n",
     "display_grid_with_gridmap(gridmap)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_grid_with_lightmap(grid_map: GridMap, light_map: list, source: tuple):\n",
+    "    # Priority order for displaying entities (highest priority first)\n",
+    "    entity_priority = [CharacterBlock, TreasureBlock, WallBlock, FloorBlock]\n",
+    "\n",
+    "    map_size = grid_map.map_size[0]\n",
+    "    grid = [[' ' for _ in range(map_size)] for _ in range(map_size)]\n",
+    "    \n",
+    "    for position, entities in grid_map.entities.items():\n",
+    "        x, y, _ = position\n",
+    "\n",
+    "        # Determine which entity to display based on priority\n",
+    "        display_entity = None\n",
+    "        for priority_entity in entity_priority:\n",
+    "            for entity in entities:\n",
+    "                if isinstance(entity, priority_entity):\n",
+    "                    display_entity = entity\n",
+    "                    break\n",
+    "            if display_entity:\n",
+    "                break\n",
+    "\n",
+    "        # Update the grid based on the entity to display\n",
+    "        if display_entity:\n",
+    "            if isinstance(display_entity, FloorBlock):\n",
+    "                grid[y][x] = '.'\n",
+    "            elif isinstance(display_entity, WallBlock):\n",
+    "                grid[y][x] = '#'\n",
+    "            elif isinstance(display_entity, TreasureBlock):\n",
+    "                print(\"found a tresure at\", x, y)\n",
+    "                grid[y][x] = 'T'\n",
+    "            elif isinstance(display_entity, CharacterBlock):\n",
+    "                grid[y][x] = 'C'\n",
+    "    x0,y0,z0 = source if source is not None else light_map[0]\n",
+    "    grid[y0][x0] = 'X'\n",
+    "    for x,y,z in light_map:\n",
+    "        if (x,y,z) != source:\n",
+    "            grid[y][x] = 'L'\n",
+    "    # Print the grid\n",
+    "    for row in grid:\n",
+    "        print(' '.join(row))\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2, 0), (1, 3, 0), (2, 3, 0), (2, 4, 0), (3, 4, 0), (3, 5, 0)]\n",
+      "# # # # # # # # # #\n",
+      "# . . . . # . . . #\n",
+      "# X . . . # . . . #\n",
+      "# L L . . # . . . #\n",
+      "# C L L . . . . . #\n",
+      "# # # L # # . . . #\n",
+      "# . . . . . . . . #\n",
+      "# . . . . . . . . #\n",
+      "# . . . . . . . . .\n",
+      "# # # # # # # # # #\n"
+     ]
+    }
+   ],
+   "source": [
+    "light=gridmap.cast_light((1,2,0),5,70)\n",
+    "print(light)\n",
+    "display_grid_with_lightmap(gridmap,light)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2, 0), (1, 3, 0), (1, 4, 0), (2, 4, 0), (2, 5, 0)]\n",
+      "# # # # # # # # # #\n",
+      "# . . . . # . . . #\n",
+      "# X . . . # . . . #\n",
+      "# L . . . # . . . #\n",
+      "# L L . . . . . . #\n",
+      "# # L # # # . . . #\n",
+      "# . . . . . . . . #\n",
+      "# . . . . . . . . #\n",
+      "# . . . . . . . . .\n",
+      "# # # # # # # # # #\n"
+     ]
+    }
+   ],
+   "source": [
+    "line = gridmap.line((1,2,0),(3,8,0))\n",
+    "print(line)\n",
+    "display_grid_with_lightmap(gridmap,line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(8, 6, 0), (0, 1, 0), (9, 6, 0), (3, 5, 0), (2, 1, 0), (0, 3, 0), (4, 5, 0), (5, 5, 0), (1, 3, 0), (2, 3, 0), (6, 4, 0), (1, 1, 0), (3, 0, 0), (7, 4, 0), (1, 5, 0), (4, 0, 0), (4, 2, 0), (2, 5, 0), (4, 4, 0), (5, 2, 0), (8, 5, 0), (3, 2, 0), (9, 5, 0), (3, 4, 0), (0, 2, 0), (0, 4, 0), (1, 0, 0), (5, 4, 0), (2, 0, 0), (2, 2, 0), (6, 5, 0), (1, 2, 0), (3, 1, 0), (7, 5, 0), (1, 4, 0), (3, 3, 0), (4, 1, 0), (2, 4, 0), (4, 3, 0), (5, 1, 0), (5, 3, 0)]\n",
+      "# L L L L # # # # #\n",
+      "L L L L L L . . . #\n",
+      "L L L L L L . . . #\n",
+      "L L L L L L . . . #\n",
+      "L L L L L L L L . #\n",
+      "# L L L L L L L L L\n",
+      "# . . . . . . . X L\n",
+      "# . . . . . . . . #\n",
+      "# . . . . . . . . .\n",
+      "# # # # # # # # # #\n"
+     ]
+    }
+   ],
+   "source": [
+    "los = gridmap.shadow_casting((1,2,0))\n",
+    "print(los)\n",
+    "display_grid_with_lightmap(gridmap,los)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 3, 0), (3, 4, 0), (4, 4, 0), (5, 4, 0), (6, 5, 0), (5, 6, 0), (4, 7, 0), (3, 8, 0)]\n",
+      "# # # # # # # # # #\n",
+      "# . . . . # . . . #\n",
+      "# C . . . # . . . #\n",
+      "# . X . . # . . . #\n",
+      "# C . L L L . . . #\n",
+      "# # # # # # L . . #\n",
+      "# . . . . L . . . #\n",
+      "# . . . L . . . . #\n",
+      "# . . L . . . . . .\n",
+      "# # # # # # # # # #\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = gridmap.a_star((1,2,0),(3,8,0))\n",
+    "print(path)\n",
+    "display_grid_with_lightmap(gridmap,path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
