also dijsktra working in example

--- a/infinipy/demos/maze_navigation/gridmap.ipynb
+++ b/infinipy/demos/maze_navigation/gridmap.ipynb
@@ -235,11 +235,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Printing entities for gridmap: gridmap_2023-11-20 00:21:37\n",
-      "Time since creation: 0.0005002021789550781\n",
+      "Printing entities for gridmap: gridmap_2023-11-20 00:24:32\n",
+      "Time since creation: 0.0\n",
       "Character1 (1, 1, 0)\n",
-      "Printing entities for gridmap: gridmap_2023-11-20 00:21:37\n",
-      "Time since creation: 0.0005002021789550781\n",
+      "Printing entities for gridmap: gridmap_2023-11-20 00:24:32\n",
+      "Time since creation: 0.0\n",
       "Character1 (1, 1, 0)\n",
       "Treasure1 (1, 2, 0)\n",
       "left open for door at:  (5, 4)\n",
@@ -256,11 +256,11 @@
       "# . . . . . . . . .\n",
       "# # # # # # # # # #\n",
       "Character1 has 0 items in inventory\n",
-      "2 [CharacterBlock(id='6e3b03fd-fc15-4b6e-8035-a3143c896279', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None), FloorBlock(id='7f010f6b-e1a3-499a-83a6-6775b7fd2483', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
-      "2 [TreasureBlock(id='dd321444-d60d-42c1-adb4-87fd8f21a1b3', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=None), FloorBlock(id='68ed35e8-c0de-4470-a126-a9dc92d6ac2d', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
+      "2 [CharacterBlock(id='d36f0862-2e04-44ef-9799-6e4b431aecdf', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None), FloorBlock(id='8ba129ed-c41c-4e4a-8c7f-f789109d20b9', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
+      "2 [TreasureBlock(id='09ccff04-f5a4-47fc-8d9c-02663d4bbbc0', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=None), FloorBlock(id='964b97b1-69c9-4aa8-8fd5-c380738d0814', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
       "execute affordance PickUp\n",
       "Target stored in status changed\n",
-      "Removing TreasureBlock(id='dd321444-d60d-42c1-adb4-87fd8f21a1b3', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='6e3b03fd-fc15-4b6e-8035-a3143c896279', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 2, 0)\n",
+      "Removing TreasureBlock(id='09ccff04-f5a4-47fc-8d9c-02663d4bbbc0', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='d36f0862-2e04-44ef-9799-6e4b431aecdf', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 2, 0)\n",
       "3\n",
       "Character1\n",
       "Floor\n",
@@ -350,10 +350,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FloorBlock(id='68ed35e8-c0de-4470-a126-a9dc92d6ac2d', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)\n",
+      "FloorBlock(id='964b97b1-69c9-4aa8-8fd5-c380738d0814', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)\n",
       "Source position changed\n",
-      "Removing CharacterBlock(id='6e3b03fd-fc15-4b6e-8035-a3143c896279', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[TreasureBlock(id='dd321444-d60d-42c1-adb4-87fd8f21a1b3', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=...)], inventory_size=10, stored_in=None) from (1, 1, 0)\n",
-      "Removing TreasureBlock(id='dd321444-d60d-42c1-adb4-87fd8f21a1b3', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='6e3b03fd-fc15-4b6e-8035-a3143c896279', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 1, 0)\n",
+      "Removing CharacterBlock(id='d36f0862-2e04-44ef-9799-6e4b431aecdf', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[TreasureBlock(id='09ccff04-f5a4-47fc-8d9c-02663d4bbbc0', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=...)], inventory_size=10, stored_in=None) from (1, 1, 0)\n",
+      "Removing TreasureBlock(id='09ccff04-f5a4-47fc-8d9c-02663d4bbbc0', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='d36f0862-2e04-44ef-9799-6e4b431aecdf', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 1, 0)\n",
       "# # # # # # # # # #\n",
       "# . . . . # . . . #\n",
       "# C . . . # . . . #\n",
@@ -383,7 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_grid_with_lightmap(grid_map: GridMap, light_map: list, source: tuple):\n",
+    "def display_grid_with_lightmap(grid_map: GridMap, light_map: list, source: Optional[tuple] = None):\n",
     "    # Priority order for displaying entities (highest priority first)\n",
     "    entity_priority = [CharacterBlock, TreasureBlock, WallBlock, FloorBlock]\n",
     "\n",
@@ -414,7 +414,11 @@
     "                grid[y][x] = 'T'\n",
     "            elif isinstance(display_entity, CharacterBlock):\n",
     "                grid[y][x] = 'C'\n",
-    "    x0,y0,z0 = source if source is not None else light_map[0]\n",
+    "    if source is not None:\n",
+    "        source = source\n",
+    "    else:\n",
+    "        source = light_map[0]\n",
+    "    x0,y0,z0 = source\n",
     "    grid[y0][x0] = 'X'\n",
     "    for x,y,z in light_map:\n",
     "        if (x,y,z) != source:\n",
@@ -486,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -496,11 +500,11 @@
       "[(8, 6, 0), (0, 1, 0), (9, 6, 0), (3, 5, 0), (2, 1, 0), (0, 3, 0), (4, 5, 0), (5, 5, 0), (1, 3, 0), (2, 3, 0), (6, 4, 0), (1, 1, 0), (3, 0, 0), (7, 4, 0), (1, 5, 0), (4, 0, 0), (4, 2, 0), (2, 5, 0), (4, 4, 0), (5, 2, 0), (8, 5, 0), (3, 2, 0), (9, 5, 0), (3, 4, 0), (0, 2, 0), (0, 4, 0), (1, 0, 0), (5, 4, 0), (2, 0, 0), (2, 2, 0), (6, 5, 0), (1, 2, 0), (3, 1, 0), (7, 5, 0), (1, 4, 0), (3, 3, 0), (4, 1, 0), (2, 4, 0), (4, 3, 0), (5, 1, 0), (5, 3, 0)]\n",
       "# L L L L # # # # #\n",
       "L L L L L L . . . #\n",
-      "L L L L L L . . . #\n",
+      "L X L L L L . . . #\n",
       "L L L L L L . . . #\n",
       "L L L L L L L L . #\n",
       "# L L L L L L L L L\n",
-      "# . . . . . . . X L\n",
+      "# . . . . . . . L L\n",
       "# . . . . . . . . #\n",
       "# . . . . . . . . .\n",
       "# # # # # # # # # #\n"
@@ -510,7 +514,7 @@
    "source": [
     "los = gridmap.shadow_casting((1,2,0))\n",
     "print(los)\n",
-    "display_grid_with_lightmap(gridmap,los)"
+    "display_grid_with_lightmap(gridmap,los,(1,2,0))"
    ]
   },
   {
@@ -544,10 +548,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2, 0), (2, 2, 0), (1, 1, 0), (1, 3, 0), (2, 1, 0), (2, 3, 0), (1, 4, 0), (2, 4, 0), (3, 1, 0), (3, 2, 0), (3, 3, 0), (3, 4, 0), (4, 1, 0), (4, 2, 0), (4, 3, 0), (4, 4, 0), (5, 4, 0), (6, 4, 0), (6, 3, 0), (6, 5, 0), (7, 3, 0), (6, 2, 0), (7, 2, 0), (7, 4, 0), (7, 5, 0), (6, 6, 0), (5, 6, 0), (7, 6, 0)]\n",
+      "# # # # # # # # # #\n",
+      "# L L L L # . . . #\n",
+      "# X L L L # L L . #\n",
+      "# L L L L # L L . #\n",
+      "# L L L L L L L . #\n",
+      "# # # # # # L L . #\n",
+      "# . . . . L L L . #\n",
+      "# . . . . . . . . #\n",
+      "# . . . . . . . . .\n",
+      "# # # # # # # # # #\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = gridmap.dijkstra((1,2,0),5)\n",
+    "path = list(path.keys())\n",
+    "print(path)\n",
+    "display_grid_with_lightmap(gridmap,path)"
+   ]
   }
  ],
  "metadata": {
