--- a/infinipy/demos/maze_navigation/gridmap.ipynb
+++ b/infinipy/demos/maze_navigation/gridmap.ipynb
@@ -235,11 +235,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Printing entities for gridmap: gridmap_2023-11-20 00:24:32\n",
+      "Printing entities for gridmap: gridmap_2023-11-20 00:35:38\n",
       "Time since creation: 0.0\n",
       "Character1 (1, 1, 0)\n",
-      "Printing entities for gridmap: gridmap_2023-11-20 00:24:32\n",
-      "Time since creation: 0.0\n",
+      "Printing entities for gridmap: gridmap_2023-11-20 00:35:38\n",
+      "Time since creation: 0.0004990100860595703\n",
       "Character1 (1, 1, 0)\n",
       "Treasure1 (1, 2, 0)\n",
       "left open for door at:  (5, 4)\n",
@@ -256,11 +256,11 @@
       "# . . . . . . . . .\n",
       "# # # # # # # # # #\n",
       "Character1 has 0 items in inventory\n",
-      "2 [CharacterBlock(id='d36f0862-2e04-44ef-9799-6e4b431aecdf', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None), FloorBlock(id='8ba129ed-c41c-4e4a-8c7f-f789109d20b9', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
-      "2 [TreasureBlock(id='09ccff04-f5a4-47fc-8d9c-02663d4bbbc0', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=None), FloorBlock(id='964b97b1-69c9-4aa8-8fd5-c380738d0814', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
+      "2 [CharacterBlock(id='c9bfd46b-3be0-4d7e-a924-efd5c2648e78', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None), FloorBlock(id='37fa156e-365b-4d67-a9b4-b6b6c0fdc29a', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
+      "2 [TreasureBlock(id='74683c8f-b94a-4edc-b69f-96dcc3a71e33', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=None), FloorBlock(id='813b6497-1ba7-441f-ac91-cb8429e02a32', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)]\n",
       "execute affordance PickUp\n",
       "Target stored in status changed\n",
-      "Removing TreasureBlock(id='09ccff04-f5a4-47fc-8d9c-02663d4bbbc0', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='d36f0862-2e04-44ef-9799-6e4b431aecdf', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 2, 0)\n",
+      "Removing TreasureBlock(id='74683c8f-b94a-4edc-b69f-96dcc3a71e33', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 1, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='c9bfd46b-3be0-4d7e-a924-efd5c2648e78', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 1, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 2, 0)\n",
       "3\n",
       "Character1\n",
       "Floor\n",
@@ -350,10 +350,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FloorBlock(id='964b97b1-69c9-4aa8-8fd5-c380738d0814', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)\n",
+      "FloorBlock(id='813b6497-1ba7-441f-ac91-cb8429e02a32', owner_id='environment', name='Floor', reach=0, hitpoints=100, size='medium', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=False, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=10, stored_in=None)\n",
       "Source position changed\n",
-      "Removing CharacterBlock(id='d36f0862-2e04-44ef-9799-6e4b431aecdf', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[TreasureBlock(id='09ccff04-f5a4-47fc-8d9c-02663d4bbbc0', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=...)], inventory_size=10, stored_in=None) from (1, 1, 0)\n",
-      "Removing TreasureBlock(id='09ccff04-f5a4-47fc-8d9c-02663d4bbbc0', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='d36f0862-2e04-44ef-9799-6e4b431aecdf', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 1, 0)\n",
+      "Removing CharacterBlock(id='c9bfd46b-3be0-4d7e-a924-efd5c2648e78', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[TreasureBlock(id='74683c8f-b94a-4edc-b69f-96dcc3a71e33', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=...)], inventory_size=10, stored_in=None) from (1, 1, 0)\n",
+      "Removing TreasureBlock(id='74683c8f-b94a-4edc-b69f-96dcc3a71e33', owner_id='environment', name='Treasure1', reach=0, hitpoints=10, size='small', blocks_move=False, blocks_los=False, can_store=False, can_be_stored=True, can_act=False, can_move=False, can_be_moved=False, position=(1, 2, 0), inventory=[], inventory_size=0, stored_in=CharacterBlock(id='c9bfd46b-3be0-4d7e-a924-efd5c2648e78', owner_id='player', name='Character1', reach=1, hitpoints=100, size='small', blocks_move=False, blocks_los=False, can_store=True, can_be_stored=False, can_act=True, can_move=True, can_be_moved=True, position=(1, 2, 0), inventory=[...], inventory_size=10, stored_in=None)) from (1, 1, 0)\n",
       "# # # # # # # # # #\n",
       "# . . . . # . . . #\n",
       "# C . . . # . . . #\n",
@@ -490,7 +490,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 2, 0), (2, 3, 0), (3, 3, 0), (4, 3, 0), (4, 4, 0), (5, 4, 0), (6, 4, 0), (6, 5, 0), (7, 5, 0)]\n",
+      "# # # # # # # # # #\n",
+      "# . . . . # . . . #\n",
+      "# X L . . # . . . #\n",
+      "# . L L L # . . . #\n",
+      "# C . . L L L . . #\n",
+      "# # # # # # L L . #\n",
+      "# . . . . . . . . #\n",
+      "# . . . . . . . . #\n",
+      "# . . . . . . . . .\n",
+      "# # # # # # # # # #\n"
+     ]
+    }
+   ],
+   "source": [
+    "los, line_los = gridmap.line_of_sight((1,2,0),(7,5,0))\n",
+    "print(line_los)\n",
+    "display_grid_with_lightmap(gridmap,line_los,(1,2,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -529,8 +558,8 @@
       "[(2, 3, 0), (3, 4, 0), (4, 4, 0), (5, 4, 0), (6, 5, 0), (5, 6, 0), (4, 7, 0), (3, 8, 0)]\n",
       "# # # # # # # # # #\n",
       "# . . . . # . . . #\n",
-      "# C . . . # . . . #\n",
-      "# . X . . # . . . #\n",
+      "# X . . . # . . . #\n",
+      "# . L . . # . . . #\n",
       "# C . L L L . . . #\n",
       "# # # # # # L . . #\n",
       "# . . . . L . . . #\n",
@@ -543,12 +572,12 @@
    "source": [
     "path = gridmap.a_star((1,2,0),(3,8,0))\n",
     "print(path)\n",
-    "display_grid_with_lightmap(gridmap,path)"
+    "display_grid_with_lightmap(gridmap,path,(1,2,0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
