update readme with crazy jugian game design

--- a/infinipy/demos/statement_factory/factory.ipynb
+++ b/infinipy/demos/statement_factory/factory.ipynb
@@ -174,7 +174,15 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<infinipy.statement.CompositeStatement object at 0x000001AC6EDF3CA0>]\n"
+     ]
+    }
+   ],
    "source": [
     "grid = GridStatement(nw,spatial_dict,statement_registry)"
    ]
@@ -188,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<infinipy.statement.CompositeStatement object at 0x00000280A3731C00>]\n"
+      "[<infinipy.statement.CompositeStatement object at 0x000001AC6EDF3CA0>]\n"
      ]
     },
     {
@@ -208,25 +216,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid.create_move_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(0, 0): [(None, '3f6020a1-8177-4d32-bfa4-5264e16e4f03')]}"
+       "{(0, 0): False, (0, 1): False, (1, 0): False, (1, 1): False}"
       ]
      },
      "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.create_move_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): [(None, 'f8dd95ef-a7d4-42e2-915d-0829fca1c1fa')]}"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +266,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mg\u001b[49m\n",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mg\u001b[49m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'g' is not defined"
      ]
     }
@@ -268,7 +287,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43ma\u001b[49m\n",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43ma\u001b[49m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
      ]
     }
